# flake-templates

./: flake.nix
basic/: flake.nix
jupyter/: flake.nix
latex/: flake.nix  paper.tex
peotry/: flake.nix  pyproject.toml
peotry/src/: main.py
pyproject/: flake.nix  pyproject.toml
pyproject/app/: main.py
python/: flake.nix
python-venv/: flake.nix
rust/: flake.nix
