[tool.poetry]
name = "peotry-project"
version = "0.1.0"
description = ""
authors = [ "Your Name <you@example.com>" ]
packages = [{include = "src"}]

[tool.poetry.scripts]
update-vim-plugins = "src.main:main"

[tool.poetry.dependencies]
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
